src/objects/Defect__c.object
<CustomObject>
    <fields>
        <fullName>RollUpSHR__c</fullName>
        <label>Total No. of days in Stakeholder Review</label>
        <summarizedField>Defect_Age__c.No_of_Days__c</summarizedField>
        <summaryFilterItems>
            <field>Defect_Age__c.Status__c</field>
            <operation>equals</operation>
            <value>Stakeholder Review</value>
        </summaryFilterItems>
        <summaryForeignKey>Defect_Age__c.Defect__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RollUpSIT__c</fullName>
        <label>Total number of days in Validated SIT</label>
        <summarizedField>Defect_Age__c.No_of_Days__c</summarizedField>
        <summaryFilterItems>
            <field>Defect_Age__c.Status__c</field>
            <operation>equals</operation>
            <value>Validated SIT</value>
        </summaryFilterItems>
        <summaryForeignKey>Defect_Age__c.Defect__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RollUpUAT__c</fullName>
        <label>Total number of days in Validate UAT</label>
        <summarizedField>Defect_Age__c.No_of_Days__c</summarizedField>
        <summaryFilterItems>
            <field>Defect_Age__c.Status__c</field>
            <operation>equals</operation>
            <value>Validate UAT</value>
        </summaryFilterItems>
        <summaryForeignKey>Defect_Age__c.Defect__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Root_Cause_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Root Cause / Reject Reason Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Root_Cause__c</fullName>
        <description>Reflects the cause of the defect / Reflect the reason for rejecting a defect</description>
        <inlineHelpText>Select a value why this Defect has been raised (due to which cause) or why it gets Rejected</inlineHelpText>
        <label>Root Cause / Reject Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Defect_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Lightning Limitation</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Code Review</fullName>
                </value>
                <value>
                    <fullName>Test Script Review</fullName>
                </value>
                <value>
                    <fullName>Test Data</fullName>
                </value>
                <value>
                    <fullName>External Data Validation</fullName>
                </value>
                <value>
                    <fullName>Configuration</fullName>
                </value>
                <value>
                    <fullName>Environment Instability</fullName>
                </value>
                <value>
                    <fullName>Test Script</fullName>
                </value>
                <value>
                    <fullName>Coding</fullName>
                </value>
                <value>
                    <fullName>Misunderstood Requirement</fullName>
                </value>
                <value>
                    <fullName>New Requirement</fullName>
                </value>
                <value>
                    <fullName>Deployment</fullName>
                </value>
                <value>
                    <fullName>Post Deployment Miss</fullName>
                </value>
                <value>
                    <fullName>In-complete Unit Testing</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Testing Error</fullName>
                </value>
                <value>
                    <fullName>Unable to Replicate</fullName>
                </value>
                <value>
                    <fullName>Working as Designed</fullName>
                </value>
                <value>
                    <fullName>Access Issue</fullName>
                </value>
                <value>
                    <fullName>Insufficient Information to Test</fullName>
                </value>
                <value>
                    <fullName>Master Data</fullName>
                </value>
                <value>
                    <fullName>Source Data</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scrum_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Primary Nokia IT team representative</inlineHelpText>
        <label>Scrum Master</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Defects3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <description>Severity of the defect</description>
        <inlineHelpText>Select the severity based on impact to the business.</inlineHelpText>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Showstopper</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sprint</label>
        <referenceTo>Sprint__c</referenceTo>
        <relationshipLabel>Defects</relationshipLabel>
        <relationshipName>Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage_Found__c</fullName>
        <description>In which type of testing the defect was identified</description>
        <label>Stage Found</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Functional Acceptance Test</fullName>
                </value>
                <value>
                    <fullName>Sprint Demo</fullName>
                </value>
                <value>
                    <fullName>Unit Test</fullName>
                </value>
                <value>
                    <fullName>SIT</fullName>
                </value>
                <value>
                    <fullName>Interface Testing</fullName>
                </value>
                <value>
                    <fullName>Mock Conversion</fullName>
                </value>
                <value>
                    <fullName>Regression Test</fullName>
                </value>
                <value>
                    <fullName>Performance Test</fullName>
                </value>
                <value>
                    <fullName>Non Regression Testing</fullName>
                </value>
                <value>
                    <fullName>Conversion</fullName>
                </value>
                <value>
                    <fullName>Deployment</fullName>
                </value>
                <value>
                    <fullName>Hypercare</fullName>
                </value>
                <value>
                    <fullName>Warranty</fullName>
                </value>
                <value>
                    <fullName>Sprint UAT</fullName>
                </value>
                <value>
                    <fullName>E2E UAT</fullName>
                </value>
                <value>
                    <fullName>Sanity Test</fullName>
                </value>
                <value>
                    <fullName>E2E SIT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the defect</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <color>#66FFFF</color>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Stakeholder Review</fullName>
                    <color>#F3D904</color>
                    <label>Stakeholder Review</label>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                    <color>#33CCFF</color>
                    <label>Assigned</label>
                </value>
                <value>
                    <fullName>Fixed</fullName>
                    <color>#3366FF</color>
                    <label>Fixed</label>
                </value>
                <value>
                    <fullName>Validated SIT</fullName>
                    <color>#3333FF</color>
                    <label>Validated SIT</label>
                </value>
                <value>
                    <fullName>Validate UAT</fullName>
                    <color>#66FF99</color>
                    <label>Validate UAT</label>
                </value>
                <value>
                    <fullName>Validate PROD</fullName>
                    <color>#66E9BD</color>
                    <label>Validate PROD</label>
                </value>
                <value>
                    <fullName>Failed Retest</fullName>
                    <color>#66CCCC</color>
                    <label>Failed Retest</label>
                </value>
                <value>
                    <fullName>Monitor</fullName>
                    <color>#FFCC33</color>
                    <label>Monitor</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                    <color>#33FF33</color>
                    <label>Closed</label>
                </value>
                <value>
                    <fullName>Re-opened</fullName>
                    <color>#33FFFF</color>
                    <label>Re-opened</label>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                    <color>#FF99FF</color>
                    <label>Rejected</label>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                    <color>#BBBBBB</color>
                    <label>Duplicate</label>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                    <color>#CC66CC</color>
                    <label>Withdrawn</label>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                    <color>#8F6429</color>
                    <label>Deferred</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>Summary of the defect</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Target_Completion_Date__c</fullName>
        <description>Used to hold the date when the defect is expected to be fixed</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date that fix is planned to be available in UAT environment</inlineHelpText>
        <label>Target Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <inlineHelpText>Select the team responsible for the requirement to which this defect is associated.</inlineHelpText>
        <label>Team</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accounts, Leads, Contacts</fullName>
                </value>
                <value>
                    <fullName>Approvals/IWA</fullName>
                </value>
                <value>
                    <fullName>CMD Pack 4</fullName>
                </value>
                <value>
                    <fullName>COE</fullName>
                </value>
                <value>
                    <fullName>CPQ Analytics</fullName>
                    <isActive>false</isActive>
                    <label>CPQ Analytics</label>
                </value>
                <value>
                    <fullName>CPQ - Arch &amp; Data</fullName>
                    <isActive>false</isActive>
                    <label>CPQ - Arch &amp; Data</label>
                </value>
                <value>
                    <fullName>CPQ - Architecture &amp; Integration</fullName>
                </value>
                <value>
                    <fullName>CPQ - CCB</fullName>
                    <isActive>false</isActive>
                    <label>CPQ - CCB</label>
                </value>
                <value>
                    <fullName>CPQ Configure</fullName>
                    <isActive>false</isActive>
                    <label>CPQ Configure</label>
                </value>
                <value>
                    <fullName>CPQ - Configure / PPI</fullName>
                    <isActive>false</isActive>
                    <label>CPQ - Configure / PPI</label>
                </value>
                <value>
                    <fullName>CPQ - Cross BG</fullName>
                </value>
                <value>
                    <fullName>CPQ Direct</fullName>
                    <isActive>false</isActive>
                    <label>CPQ Direct</label>
                </value>
                <value>
                    <fullName>CPQ - Direct ION</fullName>
                </value>
                <value>
                    <fullName>CPQ - Direct MN</fullName>
                </value>
                <value>
                    <fullName>CPQ - Direct NSW</fullName>
                </value>
                <value>
                    <fullName>CPQ - Enterprise</fullName>
                </value>
                <value>
                    <fullName>CPQ Indirect</fullName>
                    <isActive>false</isActive>
                    <label>CPQ Indirect</label>
                </value>
                <value>
                    <fullName>CPQ - Indirect</fullName>
                </value>
                <value>
                    <fullName>CPQ Master Data</fullName>
                    <isActive>false</isActive>
                    <label>CPQ Master Data</label>
                </value>
                <value>
                    <fullName>CPQ - Masterdata</fullName>
                </value>
                <value>
                    <fullName>CPQ NPI</fullName>
                    <isActive>false</isActive>
                    <label>CPQ NPI</label>
                </value>
                <value>
                    <fullName>CPQ NPI All</fullName>
                    <isActive>false</isActive>
                    <label>CPQ NPI All</label>
                </value>
                <value>
                    <fullName>CPQ - NPI All</fullName>
                </value>
                <value>
                    <fullName>CPQ NPI Direct</fullName>
                    <isActive>false</isActive>
                    <label>CPQ NPI Direct</label>
                </value>
                <value>
                    <fullName>CPQ NPI FN</fullName>
                    <isActive>false</isActive>
                    <label>CPQ NPI FN</label>
                </value>
                <value>
                    <fullName>CPQ - NPI FN</fullName>
                </value>
                <value>
                    <fullName>CPQ NPI Indirect</fullName>
                    <isActive>false</isActive>
                    <label>CPQ NPI Indirect</label>
                </value>
                <value>
                    <fullName>CPQ NPI ION</fullName>
                    <isActive>false</isActive>
                    <label>CPQ NPI ION</label>
                </value>
                <value>
                    <fullName>CPQ - NPI ION</fullName>
                </value>
                <value>
                    <fullName>CPQ NPI MN</fullName>
                    <isActive>false</isActive>
                    <label>CPQ NPI MN</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Phase__c</fullName>
        <description>In which phase of testing the defect was identified</description>
        <label>Test Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unit Test</fullName>
                </value>
                <value>
                    <fullName>Peer Review</fullName>
                </value>
                <value>
                    <fullName>System Test</fullName>
                </value>
                <value>
                    <fullName>Migration Test</fullName>
                </value>
                <value>
                    <fullName>Regression Test</fullName>
                </value>
                <value>
                    <fullName>UAT</fullName>
                </value>
                <value>
                    <fullName>Client Team QA</fullName>
                </value>
                <value>
                    <fullName>SIT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Script__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup with Test Script</description>
        <label>Test Script</label>
        <referenceTo>Test_Script__c</referenceTo>
        <relationshipLabel>Defects</relationshipLabel>
        <relationshipName>Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Times_Reopened__c</fullName>
        <description>Used to Store the number of time the defect has been reopened</description>
        <label>#of Times Reopened</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_relevant_topic__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check the box if the topic needs to be included in the training materials</inlineHelpText>
        <label>Training relevant topic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unresolved_Sprint_Defect__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this checkbox if the defect could not be resolved during the sprint in which it originated.</inlineHelpText>
        <label>Unresolved Sprint Defect</label>
        <type>Checkbox</type>
    </fields>
    <label>Defect</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Team__c</columns>
        <columns>Severity__c</columns>
        <columns>Stage_Found__c</columns>
        <columns>Environment__c</columns>
        <columns>Reported_By__c</columns>
        <columns>Developer_Assigned__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>9/22/2019 12:00 AM</value>
        </filters>
        <filters>
            <field>Reported_By__c</field>
            <operation>equals</operation>
            <value>Anshu Rajpoot</value>
        </filters>
        <label>All_ SCRM_Defects</label>
    </listViews>
    <listViews>
        <fullName>Approvals_IWA</fullName>
        <columns>NAME</columns>
        <columns>Defect_Type__c</columns>
        <columns>Related_Request__c</columns>
        <columns>Detailed_Description__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Developer_Assigned__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Team__c</field>
            <operation>equals</operation>
            <value>Approvals/IWA</value>
        </filters>
        <filters>
            <field>Sprint__c</field>
            <operation>equals</operation>
            <value>SCRM Sprint 9,SCRM Sprint 10</value>
        </filters>
        <filters>
            <field>Current_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed,Rejected,Withdrawn,Deferred</value>
        </filters>
        <filters>
            <field>Times_Reopened__c</field>
            <operation>equals</operation>
        </filters>
        <label>Approvals/IWA</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CPQ_CONFIG_Defects_E2E_UAT</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Severity__c</columns>
        <columns>Status__c</columns>
        <columns>Stage_Found__c</columns>
        <columns>Developer_Assigned__c</columns>
        <columns>Target_Completion_Date__c</columns>
        <columns>Reported_By__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Test_Script__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage_Found__c</field>
            <operation>contains</operation>
            <value>E2E UAT</value>
        </filters>
        <filters>
            <field>Requirement_Feature__c</field>
            <operation>contains</operation>
            <value>Config</value>
        </filters>
        <label>CPQ CONFIG Defects E2E UAT</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CPQ_CONFIG_Sprint_7_Defects</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Severity__c</columns>
        <columns>Status__c</columns>
        <columns>Stage_Found__c</columns>
        <columns>Developer_Assigned__c</columns>
        <columns>Target_Completion_Date__c</columns>
        <columns>Reported_By__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Test_Script__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sprint__c</field>
            <operation>contains</operation>
            <value>CPQ W1/R2 - Sprint 7</value>
        </filters>
        <filters>
            <field>Requirement_Feature__c</field>
            <operation>contains</operation>
            <value>Config</value>
        </filters>
        <label>CPQ CONFIG Sprint 7 Defects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CPQ_Configure_Sprint_4_Defects_UAT_SIT</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Developer_Assigned__c</columns>
        <columns>Severity__c</columns>
        <columns>Defect_Type__c</columns>
        <columns>Stage_Found__c</columns>
        <columns>Reported_By__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Requirement_Feature__c</field>
            <operation>contains</operation>
            <value>Configure</value>
        </filters>
        <filters>
            <field>Stage_Found__c</field>
            <operation>equals</operation>
            <value>E2E UAT</value>
        </filters>
        <filters>
            <field>Environment__c</field>
            <operation>contains</operation>
            <value>CRM</value>
        </filters>
        <label>CPQ Configure QCM UAT Defects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CPQ_Defects</fullName>
        <columns>NAME</columns>
        <columns>Requirement_Feature__c</columns>
        <columns>Related_Request__c</columns>
        <columns>Status__c</columns>
        <columns>Owning_Group__c</columns>
        <columns>Subject__c</columns>
        <columns>Sprint__c</columns>
        <columns>Priority__c</columns>
        <columns>Stage_Found__c</columns>
        <columns>Severity__c</columns>
        <columns>Developer_Assigned__c</columns>
        <columns>Target_Completion_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Environment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Team__c</field>
            <operation>contains</operation>
            <value>CPQ</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed,Rejected,Duplicate,Withdrawn</value>
        </filters>
        <filters>
            <field>Requirement_Feature__c</field>
            <operation>notContain</operation>
            <value>NPI</value>
        </filters>
        <label>CPQ Defects</label>
    </listViews>
    <listViews>
        <fullName>CPQ_Defects_Deferred_for_Hypercare</fullName>
        <columns>Requirement_Feature__c</columns>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Defect_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Severity__c</columns>
        <columns>Reported_By__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Team__c</field>
            <operation>equals</operation>
            <value>CPQ Team</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Deferred</value>
        </filters>
        <label>CPQ Defects: Deferred for Hypercare</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CPQ_E2E_UAT_Defects</fullName>
        <columns>NAME</columns>
        <columns>Requirement_Feature__c</columns>
        <columns>Subject__c</columns>
        <columns>Defect_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Severity__c</columns>
        <columns>Reported_By__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage_Found__c</field>
            <operation>equals</operation>
            <value>E2E UAT</value>
        </filters>
        <label>CPQ E2E UAT Defects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CPQ_Internal_Defects_E2E_UAT</fullName>
        <columns>Requirement_Feature__c</columns>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Severity__c</columns>
        <columns>Stage_Found__c</columns>
        <columns>Reported_By__c</columns>
        <columns>Developer_Assigned__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Team__c</field>
            <operation>equals</operation>
            <value>CPQ Team</value>
        </filters>
        <filters>
            <field>Stage_Found__c</field>
            <operation>equals</operation>
            <value>Deployment</value>
        </filters>
        <filters>
            <field>Sprint__c</field>
            <operation>equals</operation>
            <value>CPQ W1/R1 - E2E UAT</value>
        </filters>
        <label>CPQ Internal Defects E2E UAT</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CPQ_Jon_s_Defects</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Capability__c</columns>
        <columns>Stage_Found__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reported_By__c</field>
            <operation>equals</operation>
            <value>Jonathan Ranger</value>
        </filters>
        <label>CPQ - Jon&apos;s Defects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CPQ_O2Q_Defects</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Severity__c</columns>
        <columns>Status__c</columns>
        <columns>Related_Request__c</columns>
        <columns>Requirement_Feature__c</columns>
        <columns>Sprint__c</columns>
        <columns>Reported_By__c</columns>
        <columns>Developer_Assigned__c</columns>
        <columns>Defect_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Requirement_Feature__c</field>
            <operation>contains</operation>
            <value>O2Q,Q2O</value>
        </filters>
        <label>CPQ O2Q Defects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CPQ_O2Q_Q2O_Defects</fullName>
        <booleanFilter>1 AND 2 AND (3 OR 4 OR 5 OR 6 OR 7)</booleanFilter>
        <columns>Requirement_Feature__c</columns>
        <columns>Related_Request__c</columns>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Severity__c</columns>
        <columns>Stage_Found__c</columns>
        <columns>Defect_Type__c</columns>
        <columns>Developer_Assigned__c</columns>
        <columns>Environment__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Target_Completion_Date__c</columns>
        <columns>Reported_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Team__c</field>
            <operation>contains</operation>
            <value>CPQ</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed,Rejected,Duplicate,Withdrawn</value>
        </filters>
        <filters>
            <field>Requirement_Feature__c</field>
            <operation>contains</operation>
            <value>O2Q</value>
        </filters>
        <filters>
            <field>Requirement_Feature__c</field>
            <operation>contains</operation>
            <value>Q2O</value>
        </filters>
        <filters>
            <field>Requirement_Feature__c</field>
            <operation>contains</operation>
            <value>Configure</value>
        </filters>
        <filters>
            <field>Reported_By__c</field>
            <operation>equals</operation>
            <value>Eleonora Petrova</value>
        </filters>
        <filters>
            <field>BA_Functional_Lead__c</field>
            <operation>equals</operation>
            <value>Eleonora Petrova</value>
        </filters>
        <label>CPQ O2Q/Q2O/Configure Defects</label>
    </listViews>
    <listViews>
        <fullName>CPQ_Pricing_Defects_non_E2E</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Severity__c</columns>
        <columns>Stage_Found__c</columns>
        <columns>Reported_By__c</columns>
        <columns>Developer_Assigned__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Environment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Requirement_Feature__c</field>
            <operation>contains</operation>
            <value>Price</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Rejected,Duplicate,Withdrawn</value>
        </filters>
        <filters>
            <field>Stage_Found__c</field>
            <operation>notEqual</operation>
            <value>E2E UAT</value>
        </filters>
        <label>CPQ Pricing - Defects non E2E/ Jess</label>
    </listViews>
    <listViews>
        <fullName>CPQ_Pricing_E2E_UAT_R2_Defects</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Severity__c</columns>
        <columns>Stage_Found__c</columns>
        <columns>Reported_By__c</columns>
        <columns>Developer_Assigned__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Defect_Type__c</columns>
        <columns>Target_Completion_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Requirement_Feature__c</field>
            <operation>contains</operation>
            <value>Price</value>
        </filters>
        <filters>
            <field>Stage_Found__c</field>
            <operation>equals</operation>
            <value>E2E UAT</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed,Rejected,Duplicate,Withdrawn,Deferred</value>
        </filters>
        <label>CPQ Pricing - E2E UAT - Defects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CPQ_Wave_2_Defects</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Priority__c</columns>
        <columns>Requirement_Feature__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Requirement_Feature__c</field>
            <operation>equals</operation>
            <value>CPQ Wave 2 - Release 3</value>
        </filters>
        <label>CPQ Wave 2 Defects</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Defect ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Defects</pluralLabel>
    <recordTypes>
        <fullName>Defect_Creation</fullName>
        <active>true</active>
        <description>Used to control different experience/logic on creation for simplified process</description>
        <label>Defect Creation</label>
    </recordTypes>
</CustomObject>